# anno-tool

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
docs/: TODO.md
include/files/: cod_file.h  file_utils.h  game_dat_file.h  scenario_file.h  text_cod_file.h
include/platform/windows/: windows_config.h
include/tool/: config.h  tool.h
include/util/: buffer_utils.h
src/: main.cpp
src/files/: cod_file.cpp  file_utils.cpp  game_dat_file.cpp  scenario_file.cpp  text_cod_file.cpp
src/main/: main.cpp
src/tool/: tool.cpp
src/util/: buffer_utils.cpp
